Updates to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <a href="index.html">Home</a>
   <a href="about-us.html">About Us</a>
   <a href="contact-us.html">Contact Us</a>
-  <h1>This is my main page</h1>
+  <h1>This is my main page.</h1>
 </body>
 
 </html>
